--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,29 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
+# Copyright (C) 2010 Aikilab
+
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+
+# You should have received a copy of the GNU Affero General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Written by Steven Garcia
+
 # Autoconf minimum version required
 AC_PREREQ(2.59)
 
-m4_define([pkgversion], [m4_esyscmd(echo -n $(sed s/.\\+\\s// VERSION))])
+m4_define([pkgversion],
+ [m4_esyscmd(echo -n $(grep define\(\'AIKI_VERSION\',\'.\\+\'\)\; src/aiki.php \
+                       | sed s/.*define\(\'.\\+\',\''\(.*\)'\'\).*/'\1'/))])
 
 # Initialize autoconf, set the name of this package and version
 AC_INIT(aiki, pkgversion, [https://bugs.launchpad.net/aikiframework],,[http://aikiframework.org])
@@ -378,9 +397,9 @@ PRINT_CONFIG_SUMMARY()
 # Usually, makefiles are created
 AC_CONFIG_FILES([ \
   Makefile \
+  VERSION \
   PACKAGE-LICENSING \
   src/Makefile \
-  src/aiki.php:src/aiki-in.php \
   src/assets/Makefile \
   src/assets/apps/Makefile \
   src/assets/apps/admin/Makefile \
