--- a/scripts/aiki.in
+++ b/scripts/aiki.in
@@ -7,6 +7,21 @@
 #      Usage: @PACKAGE@ [OPTIONS]
 #       Note: Uses the first browser found in the $PATH
 
+# Copyright (C) 2010 Aikilab
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+
+# You should have received a copy of the GNU Affero General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
 # Add browsers to the list starting from top to
 # bottom. The top-most take precedence if found.
 BROWSERS="
