Set Installer to read SQL statements from SQL files shared with other installers

--- a/configure.ac
+++ b/configure.ac
@@ -329,6 +329,12 @@ VAR_LIST_ADD AIKI_SITE_URL $AIKI_SITE_URL
 AIKI_SITE_URL_LEN=$($ECHO "$AIKI_SITE_URL" | $AWK '{print length}')
 AC_SUBST(AIKI_SITE_URL_LEN,$AIKI_SITE_URL_LEN)
 
+# defaults for insert variable SQL
+AC_SUBST(ADMIN_USER,[admin])
+AC_SUBST(ADMIN_NAME,[admin])
+AC_SUBST(ADMIN_PASS,[74be16979710d4c4e7c6647856088456])
+AC_SUBST(ADMIN_MAIL,[''])
+
 # for rpm spec, desktop and others
 SUMMARY=[A\ CMF\ Web\ Application]
 AC_SUBST(SUMMARY)
